# rust-pg-proxy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_integration_tests.sh
.github/workflows/: ci.yml
bug-reports/: 001-extended-query-protocol.md  002-uuid-array-parameter-serialization.md
src/: cache.rs  classifier.rs  config.rs  lib.rs  main.rs  proxy.rs
tests/: integration_test.rs
